# bert.git-cli

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: tests.yml
ghpr/: __init__.py  cli.py
ghsearch/: __init__.py  cli.py
tests/: README.md  __init__.py  conftest.py  test_ghpr.py  test_ghsearch.py
