[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-ghcli"
version = "0.1.1"
description = "CLI for interacting with the GitHub API"
requires-python = ">=3.9"
authors = [{ name = "Bert Tejeda", email = "berttejeda@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "PyYAML>=6.0.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
ghsearch = "ghsearch.cli:main"
ghpr = "ghpr.cli:main"

[tool.setuptools]
packages = ["ghsearch", "ghpr"]


