[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-ghcli"
version = "0.1.3"
description = "CLI for interacting with the GitHub API"
requires-python = ">=3.9"
authors = [{ name = "Bert Tejeda", email = "berttejeda@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "PyYAML>=6.0.0",
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[project.scripts]
ghsearch = "ghsearch.cli:main"
ghpr = "ghpr.cli:main"

[tool.setuptools]
packages = ["ghsearch", "ghpr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]


